--- a/Emp_Attendance/Web.config
+++ b/Emp_Attendance/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="MyConnectionString"
+			 connectionString="Data Source=DESKTOP-51NMSTS\SQLEXPRESS;Initial Catalog=EmployeeDB;User ID=sa;Password=sql@2019;Encrypt=False"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
