--- a/Emp_Attendance/packages.config
+++ b/Emp_Attendance/packages.config
@@ -10,6 +10,12 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.1652.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.2015.Runtime" version="12.0.2.2402" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Runtime.WebForms" version="12.0.2402.15" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
